-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.1
-
039a28468a1812b8f0662aba62c173e572899841
Kriacluster crashes into QML JIT.
0 0x4deb000(0, 0x1afed0c, 0, 0x4f8d230, 0, 0x19f9e1c) 1 QV4::Moth::VME::exec(const struct QV4::FunctionObject *fo=0x68013d0, const struct QV4::Value *thisObject=0x68013c0, const struct QV4::Value *argv=0x6801390, int argc=1) [/home/qt3d/511/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:574,71] 2 QV4::ScriptFunction::call(const struct QV4::FunctionObject *fo=0x68013d0, const struct QV4::Value *thisObject=0x68013c0, const struct QV4::Value *argv=0x6801390, int argc=1) [/home/qt3d/511/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:406,2] 3 QV4::FunctionObject::call(const struct QV4::FunctionObject *const this=0x68013d0, const struct QV4::Value *thisObject=0x68013c0, const struct QV4::Value *argv=0x6801390, int argc=1) [/home/qt3d/511/qtdeclarative/src/qml/jsruntime/qv4functionobject_p.h:163,2] 4 QV4::Runtime::method_callName(struct QV4::ExecutionEngine *engine=0x5281b90, int nameIndex=29, struct QV4::Value *argv=0x6801390, int argc=1) [/home/qt3d/511/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:1030,21] 5 0xe3f0(0, 0x1afed0c, 0, 0x4f8d230, 0, 0x19f9e1c)
"INTEGRITY violation - attempt to execute in protected memory"
- is required for
-
QT3DS-1484
Bring up Qt 3D Studio runtime 2.0 on Integrity + QC S820A
-
- Closed
-