Fix Integrity OS allocator memory attributes

Correctly set the attributes when allocation is extending to more
than one page. Code spanning multiple pages can now be executed.

Task-number: QTBUG-70350
Change-Id: I02af1add274f80befda5662d9670bfd2052c3c52
Reviewed-by: Lars Knoll <lars.knoll@qt.io>